Added forward ref to other docs

--- a/PhysicsDarkUniverse/doc.bib
+++ b/PhysicsDarkUniverse/doc.bib
@@ -1,4 +1,47 @@
+%%DMWG
 
+@article{Boveia:2016mrp,
+      author         = "Busoni, Giorgio and others",
+      editor         = "Boveia, Antonio and Buchmueller, Oliver and Doglioni,
+                        Caterina and Hahn, Kristian and Haisch, Ulrich and
+                        Kahlhoefer, Felix and Mangano, Michelangelo and McCabe,
+                        Christopher and Tait, Tim M. P.",
+      title          = "{Recommendations on presenting LHC searches for missing
+                        transverse energy signals using simplified $s$-channel
+                        models of dark matter}",
+      year           = "2016",
+      eprint         = "1603.04156",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-LPCC-2016-001, FERMILAB-FN-1009-CD",
+      SLACcitation   = "%%CITATION = ARXIV:1603.04156;%%"
+}
+
+@article{Albert:2017onk,
+      author         = "Albert, Andreas and others",
+      title          = "{Recommendations of the LHC Dark Matter Working Group:
+                        Comparing LHC searches for heavy mediators of dark matter
+                        production in visible and invisible decay channels}",
+      year           = "2017",
+      eprint         = "1703.05703",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-LPCC-2017-01",
+      SLACcitation   = "%%CITATION = ARXIV:1703.05703;%%"
+}
+
+@article{Abe:2018bpo,
+      author         = "Abe, Tomohiro and others",
+      title          = "{LHC Dark Matter Working Group: Next-generation spin-0
+                        dark matter models}",
+      collaboration  = "LHC Dark Matter Working Group",
+      year           = "2018",
+      eprint         = "1810.09420",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-LPCC-2018-02",
+      SLACcitation   = "%%CITATION = ARXIV:1810.09420;%%"
+}
 
 
 
@@ -1605,7 +1648,6 @@
       SLACcitation   = "%%CITATION = HEP-PH/0207036;%%",
 }
 
-%@article{Belyaev:2016lok,
 @article{Belyaev:2015tap,
       author         = "Belyaev, Alexander and Cacciapaglia, Giacomo and Ivanov,
                         Igor P. and Rojas-Abatte, Felipe and Thomas, Marc",
@@ -1989,7 +2031,7 @@
 }
 
 
-%@article{Abdallah:2015ter,
+
 @article{DMatLHCProceedings,
       author         = "Abdallah, Jalal and others",
       title          = "{Simplified Models for Dark Matter Searches at the LHC}",
@@ -2660,7 +2702,6 @@
 }
 
 
-%@article{Backovic:2015soa,
 @article{NewMadgraphModels,
       author         = "Backovic, Mihailo and Kr{\"a}mer, Michael and Maltoni,
                         Fabio and Martini, Antony and Mawatari, Kentarou and
@@ -3092,6 +3133,7 @@
 	reportNumber   = "DESY-11-261, ULB-TH-12-08",
 	SLACcitation   = "%%CITATION = ARXIV:1206.6316;%%",
 }
+
 @article{IDMhgaga2,
 	author         = "Swiezewska, Bogumila and Krawczyk, Maria",
 	title          = "Diphoton rate in the inert doublet model with a 125~{GeV}
@@ -3108,23 +3150,7 @@
 	reportNumber   = "IFT-9-2012",
 	SLACcitation   = "%%CITATION = ARXIV:1212.4100;%%",
 }
-@article{IDMposthiggs, 
-      author         = "Goudelis, A. and Herrmann, B. and St\aa{}l, O.", 
-      title          = "Dark matter in the {Inert Doublet Model} after the 
-                        discovery of a Higgs-like boson at the {LHC}", 
-      journal        = "JHEP", 
-      volume         = "1309", 
-      pages          = "106", 
-      doi            = "10.1007/JHEP09(2013)106", 
-      year           = "2013", 
-      eprint         = "1303.3010", 
-      archivePrefix  = "arXiv", 
-      primaryClass   = "hep-ph", 
-      reportNumber   = "LAPTH-006-13", 
-      SLACcitation   = "%%CITATION = ARXIV:1303.3010;%%", 
-} 
 
-%@article{Belanger:2015kga,
 @article{IDMdileptonsII,
 
       author         = "Belanger, Genevieve and Dumont, Beranger and Goudelis,
@@ -3236,4 +3262,22 @@
 	primaryClass   = "hep-ph",
 	reportNumber   = "FERMILAB-PUB-08-500-A",
 	SLACcitation   = "%%CITATION = ARXIV:0809.2849;%%",
+}
+
+@article{Allahverdi:2015mha,
+      author         = "Allahverdi, Rouzbeh and Dalchenko, Mykhailo and Dutta,
+                        Bhaskar and Flórez, Andrés and Gao, Yu and Kamon, Teruki
+                        and Kolev, Nikolay and Mueller, Ryan and Segura, Manuel",
+      title          = "{Distinguishing Standard Model Extensions using Monotop
+                        Chirality at the LHC}",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2016",
+      pages          = "046",
+      doi            = "10.1007/JHEP12(2016)046",
+      eprint         = "1507.02271",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MI-TH-1523, CETUP2015-011",
+      SLACcitation   = "%%CITATION = ARXIV:1507.02271;%%"
 }
