--- a/PhysicsDarkUniverse/doc.tex
+++ b/PhysicsDarkUniverse/doc.tex
@@ -2,7 +2,7 @@
 
 \usepackage{lineno,hyperref}
 %\usepackage{authblk}
-\modulolinenumbers[5]
+%\modulolinenumbers[5]
 
 \journal{Physics of the Dark Universe}
 
