--- a/PhysicsDarkUniverse/tex/Introduction.tex
+++ b/PhysicsDarkUniverse/tex/Introduction.tex
@@ -105,6 +105,8 @@ important to restrict the scope and timescale to the following:
   readers. This report represents the views of its endorsers, as participants of the forum.
 \end{enumerate}
 
+This document constitutes the basis for the subsequent LHC Dark Matter Working Group documents~\cite{Boveia:2016mrp, Albert:2017onk, Abe:2018bpo}, complementing and updating these recommendations. 
+
 \subsection{Grounding Assumptions}
 
 We assume that interactions exist between the SM hadrons
@@ -265,7 +267,7 @@ Chapter \ref{app:MonojetLikeModels_Appendix}.
 Chapter \ref{sec:EFTValidity} is devoted to the treatment of the presentation of results for the benchmark
 models from contact interaction operators. 
 Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. 
-Chapter \ref{chapter:conclusions} concludes the report.
+Chapter \ref{section:conclusions} concludes the report.
 
 Further models that could be studied
 beyond early searches and their implementation are described in~\ref{app:EWSpecificModels_Appendix}. 
