updates for PDU submission

--- a/PhysicsDarkUniverse/doc.bib
+++ b/PhysicsDarkUniverse/doc.bib
@@ -779,15 +779,17 @@
 @misc{ForumSVN,
         key = {Forum Model Repository},
 	title = "{Git} repository for model, input and parameter cards for models considered in the {ATLAS}/{CMS} {Dark Matter Forum} studies",
-	howpublished = {\url{https://github.com/LHC-DMWG/model-repository/tree/master/models}},
+	howpublished = {\url{https://doi.org/10.5281/zenodo.3260943}},
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
-	note = "[Online; accessed 08-May-2019]"
+	note = "[Online; accessed 28-June-2019]"
 }
 
 @misc{ForumSVN_DMV,
         key = {Forum Model Repository DMV},
 	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of vector mediator",
 	howpublished = {\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMV}},
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -797,6 +799,7 @@
 	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of axial vector mediator",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMA}",
 	year = {2015}, 
+        doi = "10.5281/zenodo.3260943",
 	note = "[Online; accessed 08-May-2019]"
 }
 
@@ -805,6 +808,7 @@
 	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar and pseudoscalar
 	coupling to the quarks in a {Yukawa}-like way, at {NLO}",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMS}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -814,6 +818,7 @@
 	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator,
 	coupling to the quarks through a top loop",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMP_tloop}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -822,14 +827,16 @@
         key = {Forum Model Repository DMS_tloop},
 	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar mediator",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMS_tLoop}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMGG,
         key = {Forum Model Repository DMGG},
-	title = {{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop},
+	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator, with ``effective'' coupling from gluon loop",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMGG}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -838,6 +845,7 @@
         key = {Forum Model Repository EW_DMV},
 	title = "{Git} repository for {Madgraph} input cards for model with {$s$}-channel exchange of vector mediator, for electroweak boson final states",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_DMV}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -846,6 +854,7 @@
         key = {Forum Model Repository TChannel-1},
 	title = "{Git} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to light quarks only",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_tChannel/contributed_by_PapucciVichiZurek}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -854,6 +863,7 @@
         key = {Forum Model Repository TChannel-2},
 	title = "{Git} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to all quark generations",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_tChannel/contributed_by_Amelia_Brennan}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -863,6 +873,7 @@
         key = {Forum Model Repository DMTTBar},
 	title = "{Git} repository for {Madgraph} inputs for model with {$s$}-channel exchange of pseudo-scalar mediator, produced in association with top quarks",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/HF_S+PS}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -871,6 +882,7 @@
         key = {Forum Model Repository DMSingleB},
 	title = "{Git} repository for {Madgraph} inputs for simplified model with a colored scalar mediator coupling to {DM} and b-quarks",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/HF_S+PS}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -879,6 +891,7 @@
         key = {Forum Model Repository EWEFTD7},
 	title = "{Git} repository for {Madgraph} inputs for dimension-7 {EFT} models with direct {DM}-{EW} boson couplings",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Fermion_D7/contributed_by_Renjie_Wang}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -887,6 +900,7 @@
         key = {Forum Model Repository EWMonoHiggs},
 	title = "{Git} repository for {Madgraph} inputs for vector and scalar mediator models leading to a mono-{Higgs} signature",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Higgs_all}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -895,6 +909,7 @@
         key = {Forum Model Repository EWMonoHiggs-2HDM},
 	title = "{Git} repository for {Madgraph} inputs for {2HDM} model leading to a mono-{Higgs} signature",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Higgs_2HDM}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -904,6 +919,7 @@
         key = {Forum Model Repository EWMonoTop},
 	title = "{Git} repository for {Madgraph} inputs for mono-top models",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/HF_SingleTop}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -912,6 +928,7 @@
         key = {Forum Model Repository monoHEFTD5},
 	title = "{Git} repository for {Madgraph} inputs for mono-{Higgs} {EFT} models, dimension 4 and 5",
 	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Higgs_D4D5}",
+        doi = "10.5281/zenodo.3260943",
 	year = {2015}, 
 	note = "[Online; accessed 08-May-2019]"
 }
@@ -1631,7 +1648,7 @@
       reportNumber   = "TUM-HEP-379-00, CERN-TH-2000-190",
       SLACcitation   = "%%CITATION = HEP-PH/0007085;%%",
 }
-@article{D'Ambrosio:2002ex,
+@article{DAmbrosio:2002ex,
       author         = "D'Ambrosio, G. and Giudice, G.F. and Isidori, G. and
                         Strumia, A.",
       title          = "{Minimal Flavor Violation}: An Effective field theory
@@ -1920,7 +1937,7 @@
       SLACcitation   = "%%CITATION = ARXIV:1106.6019;%%",
 }
 
-# Reference for treatment of width
+% Reference for treatment of width
 
 @inproceedings{Bardin:1989qr,
       author        = "Bardin, Dimitri Yuri and Bilenky, S M and Beenakker, W and
@@ -2318,7 +2335,7 @@
 
 %%% END OF ATLAS/CMS EXPERIMENTAL PAPERS
 
-@article{D'Eramo:2014aba,
+@article{DEramo:2014aba,
 	author         = "D'Eramo, Francesco and Procura, Massimiliano",
 	title          = "Connecting Dark Matter {UV} Complete Models to Direct
 	Detection Rates via Effective Field Theory",
@@ -2351,7 +2368,7 @@
 }
 
 
-@article{O'Connell:2006wi,
+@article{OConnell:2006wi,
 	author         = "O'Connell, Donal and Ramsey-Musolf, Michael J. and Wise,
 	Mark B.",
 	title          = "Minimal Extension of the {Standard Model} Scalar Sector",
