--- a/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_MonoHiggs.tex
@@ -313,7 +313,7 @@ on a smaller set of grid points to be generated.
 \subsubsection{\MET+Higgs from a scalar mediator}
 
 A real scalar singlet $S$ coupling to DM can be introduced as a portal between SM and the dark sector 
-through the Higgs field. The most general scalar potential is detailed in Ref.~\cite{O'Connell:2006wi}, 
+through the Higgs field. The most general scalar potential is detailed in Ref.~\cite{OConnell:2006wi}, 
 including terms that break \Ztwo. 
 The \Ztwo symmetry, which causes the new scalar to also be a DM candidate, is not covered in this report, but follows Ref.~\cite{Carpenter:2013xra}
 introducing an additional coupling to DM that breaks \Ztwo and leads to a new invisible decay of $S$. 
