--- a/PhysicsDarkUniverse/tex/Introduction.tex
+++ b/PhysicsDarkUniverse/tex/Introduction.tex
@@ -105,7 +105,7 @@ important to restrict the scope and timescale to the following:
   readers. This report represents the views of its endorsers, as participants of the forum.
 \end{enumerate}
 
-This document constitutes the basis for the subsequent LHC Dark Matter Working Group documents~\cite{Boveia:2016mrp, Albert:2017onk, Abe:2018bpo}, complementing and updating these recommendations. 
+This document constitutes the basis for further recommendations from the LHC Dark Matter Working Group~\cite{Boveia:2016mrp, Albert:2017onk, Abe:2018bpo}. 
 
 \subsection{Grounding Assumptions}
 
@@ -159,7 +159,7 @@ interesting possibilities are added to the literature almost daily,
 these basic building blocks account for much of the physics studied at
 hadron colliders in the past three decades.
 
-We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
+We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,DAmbrosio:2002ex} applies to the
 models included in this report. This means that the flavor structure of the
 couplings between DM and ordinary particles follows the same
 structure as the SM. This choice is simple, since no
